Criação do Estilo CSS do Footer

--- a/index.html
+++ b/index.html
@@ -66,6 +66,42 @@
             <input type="submit" class="bot" value="Cadastrar">
         </form>
     </section>
-    
+    <footer>
+        <div class="container">
+            <ul>
+                <h3>DNC</h3>
+                <p>Bootcamp para alunos de Front-End<br>
+                   para desenvolverem sites de cadastro.</p>
+                <div class="redes-sociais">
+                    <img src="simbolos/facebook.png" alt="Facebook" width="30" height="30">
+                    <img src="simbolos/instagram.png" alt="Instagram" width="30" height="30">
+                    <img src="simbolos/linkedin.png" alt="Linkedin" width="30" height="30">
+                    <img src="simbolos/twitter.png" alt="Twitter" width="30" height="30">
+                </div>
+            </ul>
+            <ul>
+                <h3>Link</h3>
+                <li><a class="linha" href="#">Preços</a></li>
+                <li><a class="linha" href="#">Serviços</a></li>
+                <li><a class="linha" href="#">Baixar</a></li>
+            </ul>
+            <ul>
+                <h3>Suporte</h3>
+                <li><a class="linha" href="#">FAQ</a></li>
+            </ul>
+            <ul>
+                <h3>Nos Contate</h3>
+                <li>
+                    <p>+55 123456789</p>
+                </li>
+                <li>
+                    <p>E-mail</p>
+                </li>
+                <li>
+                    <p>Brasil</p>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
